[package]
name = "bookup"
version = "0.1.0"
authors = ["Ji-Hun Kim <jihuun.k@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
select = "0.5.0"
